// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-stackadapt-audiences destination: forwardProfile action - all fields 1`] = `
Object {
  "query": "mutation {
      upsertProfiles(
        advertiserId: PsAwlRv%,
        externalProvider: \\"segmentio\\",
        syncId: \\"f24e8ba158f2f09eaec6035ece3124e3a93a286d850f5a8a7d4403681b8748eb\\",
        profiles: \\"[{\\\\\\"testType\\\\\\":\\\\\\"PsAwlRv%\\\\\\",\\\\\\"userId\\\\\\":\\\\\\"PsAwlRv%\\\\\\"}]\\"
      ) {
        userErrors {
          message
        }
      }
      upsertProfileMapping(
        input: {
          advertiserId: PsAwlRv%,
          mappingSchema: \\"[{\\\\\\"incoming_key\\\\\\":\\\\\\"userId\\\\\\",\\\\\\"destination_key\\\\\\":\\\\\\"external_id\\\\\\",\\\\\\"data_type\\\\\\":\\\\\\"string\\\\\\",\\\\\\"is_pii\\\\\\":false},{\\\\\\"incoming_key\\\\\\":\\\\\\"testType\\\\\\",\\\\\\"destination_key\\\\\\":\\\\\\"testType\\\\\\",\\\\\\"data_type\\\\\\":\\\\\\"string\\\\\\",\\\\\\"is_pii\\\\\\":false}]\\",
          mappableType: \\"segmentio\\",
        }
      ) {
        userErrors {
          message
        }
      }
      upsertExternalAudienceMapping(
        input: {
          advertiserId: PsAwlRv%,
          mappingSchema: \\"[{\\\\\\"incoming_key\\\\\\":\\\\\\"audienceId\\\\\\",\\\\\\"destination_key\\\\\\":\\\\\\"external_id\\\\\\",\\\\\\"data_type\\\\\\":\\\\\\"string\\\\\\"},{\\\\\\"incoming_key\\\\\\":\\\\\\"audienceName\\\\\\",\\\\\\"destination_key\\\\\\":\\\\\\"name\\\\\\",\\\\\\"data_type\\\\\\":\\\\\\"string\\\\\\"}]\\",
          mappableType: \\"segmentio\\"
        }
      ) {
        userErrors {
          message
        }
      }
    }",
}
`;

exports[`Testing snapshot for actions-stackadapt-audiences destination: forwardProfile action - required fields 1`] = `
Object {
  "query": "mutation {
      upsertProfiles(
        advertiserId: PsAwlRv%,
        externalProvider: \\"segmentio\\",
        syncId: \\"6a621eeab9a88ec2f054989bccddeec1d63de12fbc7ac74b2a2a67ab5679033f\\",
        profiles: \\"[{\\\\\\"userId\\\\\\":\\\\\\"PsAwlRv%\\\\\\"}]\\"
      ) {
        userErrors {
          message
        }
      }
      upsertProfileMapping(
        input: {
          advertiserId: PsAwlRv%,
          mappingSchema: \\"[{\\\\\\"incoming_key\\\\\\":\\\\\\"userId\\\\\\",\\\\\\"destination_key\\\\\\":\\\\\\"external_id\\\\\\",\\\\\\"data_type\\\\\\":\\\\\\"string\\\\\\",\\\\\\"is_pii\\\\\\":false}]\\",
          mappableType: \\"segmentio\\",
        }
      ) {
        userErrors {
          message
        }
      }
      upsertExternalAudienceMapping(
        input: {
          advertiserId: PsAwlRv%,
          mappingSchema: \\"[{\\\\\\"incoming_key\\\\\\":\\\\\\"audienceId\\\\\\",\\\\\\"destination_key\\\\\\":\\\\\\"external_id\\\\\\",\\\\\\"data_type\\\\\\":\\\\\\"string\\\\\\"},{\\\\\\"incoming_key\\\\\\":\\\\\\"audienceName\\\\\\",\\\\\\"destination_key\\\\\\":\\\\\\"name\\\\\\",\\\\\\"data_type\\\\\\":\\\\\\"string\\\\\\"}]\\",
          mappableType: \\"segmentio\\"
        }
      ) {
        userErrors {
          message
        }
      }
    }",
}
`;

exports[`Testing snapshot for actions-stackadapt-audiences destination: postMessage action - all fields 1`] = `
Object {
  "query": "SwvXw&[MtMsswfq8J6",
  "variables": Object {
    "testType": "SwvXw&[MtMsswfq8J6",
  },
}
`;

exports[`Testing snapshot for actions-stackadapt-audiences destination: postMessage action - required fields 1`] = `Object {}`;
